🚀 first scoped publish

--- a/example/package.json
+++ b/example/package.json
@@ -11,6 +11,6 @@
   "author": "AngryChocobo",
   "license": "ISC",
   "dependencies": {
-    "echo": "file:.."
+    "@angrychocobo/echo": "file:.."
   }
 }
