--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint ./src"
   },
   "repository": {
@@ -20,9 +20,12 @@
   },
   "homepage": "https://github.com/AngryChocobo/echo#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.18.6",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
-    "eslint": "^8.19.0"
+    "babel-jest": "^28.1.3",
+    "eslint": "^8.19.0",
+    "jest": "^28.1.3"
   },
   "dependencies": {
     "typescript": "^4.7.4"
