--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@angrychocobo/echo",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "description": "a useful function can return what you had passed ~",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "type": "module",
   "scripts": {
     "test": "jest",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -25,10 +26,10 @@
     "@typescript-eslint/parser": "^5.30.6",
     "babel-jest": "^28.1.3",
     "eslint": "^8.19.0",
-    "jest": "^28.1.3"
+    "jest": "^28.1.3",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@types/jest": "^28.1.6",
-    "typescript": "^4.7.4"
+    "@types/jest": "^28.1.6"
   }
 }
