--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@angrychocobo/echo",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "a useful function can return what you had passed ~",
   "main": "lib/index.js",
   "type": "module",
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
     "test": "jest",
     "lint": "eslint ./src",
