--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angrychocobo/echo",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "a useful function can return what you had passed ~",
   "main": "lib/index.js",
   "type": "module",
@@ -10,7 +10,8 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint ./src",
-    "build": "tsc"
+    "build": "tsc",
+    "p": "npm publish --access=public"
   },
   "repository": {
     "type": "git",
