--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "test": "jest",
+    "tw": "npm run test --watch",
     "lint": "eslint ./src",
     "build": "tsc",
     "p": "npm publish --access=public"
@@ -24,16 +25,20 @@
     "url": "https://github.com/AngryChocobo/echo/issues"
   },
   "homepage": "https://github.com/AngryChocobo/echo#readme",
+  "jest": {
+    "transform": {
+      "^.+\\.(t|j)sx?$": "ts-jest"
+    }
+  },
   "devDependencies": {
     "@babel/preset-env": "^7.18.6",
+    "@types/jest": "^28.1.6",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "babel-jest": "^28.1.3",
     "eslint": "^8.19.0",
     "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
-  },
-  "dependencies": {
-    "@types/jest": "^28.1.6"
   }
 }
