--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angrychocobo/echo",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "a useful function can return what you had passed ~",
   "main": "lib/index.js",
   "type": "module",
@@ -8,11 +8,16 @@
     "lib/**/*"
   ],
   "scripts": {
+    "pretest": "echo 在测试之前",
     "test": "jest",
+    "posttest": "echo 在测试之后",
+    "prebuild": "npm run test",
     "build": "tsc",
+    "buildcjs": "npm run build -- --module commonjs",
+    "p": "npm publish --access=public",
+    "prepublishOnly": "npm run build",
     "tw": "npm run test --watch",
-    "lint": "eslint ./src",
-    "p": "npm publish --access=public"
+    "lint": "eslint ./src"
   },
   "repository": {
     "type": "git",
