--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angrychocobo/echo",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "description": "a useful function can return what you had passed ~",
   "main": "lib/index.js",
   "type": "module",
@@ -14,7 +14,8 @@
     "p": "npm publish --access=public",
     "prepublishOnly": "npm run build",
     "tw": "npm run test --watch",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
@@ -40,6 +41,7 @@
     "babel-jest": "^28.1.3",
     "eslint": "^8.19.0",
     "jest": "^28.1.3",
+    "standard-version": "^9.5.0",
     "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
   }
